<resources>
    <string name="app_name">Space Traders</string>
    <string name="action_settings">Player Settings</string>
    <string name="action_market">Market</string>
    <string name="action_game">Travel</string>
    <string name="action_select">Select</string>
    <string name="action_info">Player Info</string>
    <string name="action_ship">Ship Market</string>
    <string name="action_login">Login</string>
    <string name="action_profile">Profile</string>
    <string name="action_register">Register</string>
    <string name="action_minigame">Mini Game</string>

    <string name="name_main">S P A C E\nT R A D E R S</string>
    <string name="play">PLAY</string>
    <string name="test">Test</string>

    <string name="pName">Player Name:\t</string>
    <string name="oNameHint">Type player name</string>
    <string name="pInfo">Player Information</string>
    <string name="buyShip">Buy Ship</string>
    <string name="startTr">Travel</string>
    <string name="profile">Profile</string>

    <string name="sPoints">Skill Points: </string>
    <string name="defaultTtlSP">16</string>
    <string name="defaultSKL">0</string>
    <string name="sk1">Pilot</string>
    <string name="sk2">Fighter</string>
    <string name="sk3">Trader</string>
    <string name="sk4">Engineer</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="difficulty">Difficulty:\t</string>
    <string name="leftDF">◂</string>
    <string name="rightDF">▸</string>
    <string name="defaultDif">EASY</string>

    <string name="save">Save</string>
    <string name="select">Select solar system to travel</string>
    <string name="currentSys">Current system:\t</string>
    <string name="currOn">You are currently on\t\t</string>
    <string name="tmpSys">Mars</string>
    <string name="tmpTLv">MEDIEVAL</string>
    <string name="tmpRsr">RICHSOIL</string>
    <string name="openMarket">Enter Market</string>

    <string name="done">Done</string>
    <string name="itemName">ITEM NAME</string>
    <string name="sRem">2</string>
    <string name="inCargo">\tin Cargo</string>
    <string name="sPrice">(15.00)</string>
    <string name="switchSell">Switch to Sell</string>
    <string name="switchBuy">Switch to Buy</string>
    <string name="ttlCost">Total Cost:\t</string>
    <string name="ttlSale">Total Sale:\t</string>
    <string name="sSale">0</string>
    <string name="urCredit">Your credits:\t\t</string>
    <string name="sCredit">1000</string>
    <string name="fuelLeft">\t| Fuel:\t</string>
    <string name="sFuel">2000000</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <string name="cargo">My items:\t</string>

    <string name="selectShip">Select ship to purchase</string>
    <string name="currentShip">Current ship:\t</string>
    <string name="tmpShip">GNAT</string>
    <string name="creditLeft">\t| Credit:\t</string>
    <string name="sShip">100000</string>
    <string name="purchaseShip">Buy Ship</string>

    <string name="profile_welcome">Welcome to\nHidden GALAXY</string>
    <string name="profile_email">TextView User Email</string>
    <string name="profile_exit">Exit Galaxy</string>
    <string name="profile_save">Save Information</string>
    <string name="profile_infoSave">Information saved…</string>

    <string name="reg_email">\'Planet Name\' @ spacetrader.com</string>
    <string name="reg_coordinate">Your Planet\'s Coordinate</string>
    <string name="reg_join">Join Galaxy</string>
    <string name="reg_signIn">Already a member? Enter here!</string>
    <string name="reg_sending">Sending your information to the Galaxy…</string>
    <string name="reg_success">Registered Successfully</string>
    <string name="reg_fail">Please use correct email format</string>

    <string name="login_name">Planet Name (email)</string>
    <string name="login_coordinate">Planet\'s Coordinate</string>
    <string name="login_enter">Enter BlackHole</string>
    <string name="login_register">Not a member yet? Register here</string>
    <string name="login_enterE">Please enter email</string>
    <string name="login_enterP">Please enter password</string>
    <string name="login_check">Checking your email and password from Galaxy…</string>
    <string name="login_checkAgain">Please Check your email or password</string>

    <string name="mg">Mini game</string>
    <string name="mg_welcome">Welcome to\nSun, Moon, Star</string>
    <string name="mg_default">This game is same as\nrock, scissor, paper.\nChoose your planet!</string>
    <string name="mg_sun_sun">Enemy chose Sun, You chose Sun.
        \nIt\'s a tie. You got your 100 credits back.</string>
    <string name="mg_sun_moon">It\'s an Eclipse! Moon has covered your Sun.
        \nYou lost! Try again!</string>
    <string name="mg_sun_star">Your Sun burned enemy\'s Star.
        \n You won! You\'ve earned 200 credits!</string>
    <string name="mg_moon_sun">It\'s an Eclipse! Your Moon has covered enemy\'s Sun!
        \nYou won! You\'ve earned 200 credits!</string>
    <string name="mg_moon_moon">Enemy chose Moon, You chose Moon.
        \nIt\'s a tie! You got your 100 credits back.</string>
    <string name="mg_moon_star">Star crashed to your Moon.\nYou lost. Try again!</string>
    <string name="mg_star_sun">Sun burned your Star.\nYou lost. Try again!</string>
    <string name="mg_star_moon">Your star crashed to enemy\'s Moon.
        \nYou won! You\'ve earned 200 credits!</string>
    <string name="mg_star_star">Enemy chose Star, You chose Star.\n It\'s a tie.</string>
    <string name="mg_play_again">This game is same as\nrock, scissor, paper.
        \nPay 100 credits and Choose your planet!\nYour credit :\t</string>
</resources>