<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".Activities.Database.RegisterActivity"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/rEmailET"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_email"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat_regular" />

        <EditText
            android:id="@+id/rPasswordET"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_coordinate"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat_regular" />

        <Button
            android:id="@+id/regBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_join"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat_regular" />

        <TextView
            android:id="@+id/rSignInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_signIn"
            android:fontFamily="@font/montserrat_regular" />
    </LinearLayout>

</layout>