<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".Activities.SelectActivity"
    android:padding="@dimen/margin3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:src="@drawable/galaxy"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin7"
        android:background="@drawable/roundrectangle"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/pInfo"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin7"
        android:background="@drawable/roundrectangle"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/buyShip"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <Button
        android:onClick="startTravel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin7"
        android:background="@drawable/rrgreen"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/startTr"
        android:textSize="20sp"
        android:textColor="@color/neonGreen" />

</LinearLayout>